Lisätty C#-esimerkki palkanlaskenta-XML-tiedoston käsittelystä.

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@ DotNet/HelloWorldDemo2/VisualBasicKirjasto/obj/
 DotNet/Henkilöt/bin/
 DotNet/Henkilöt/obj/
 DotNet/TiedostonLuku/bin/
+DotNet/PalkanlaskentaXml/bin/
+DotNet/PalkanlaskentaXml/obj/
