Lisätty UIPath-sekvenssi, joka tallentaa tietoja HTTP:llä JSONPlaceholder-palveluun.

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,5 @@ DotNet/Henkilöt/obj/
 DotNet/TiedostonLuku/bin/
 DotNet/PalkanlaskentaXml/bin/
 DotNet/PalkanlaskentaXml/obj/
+UIPath/HTTP/HttpJsonDemo/.local/
+UIPath/HTTP/HttpJsonDemo/.settings/
